--- a/package.json
+++ b/package.json
@@ -11,15 +11,10 @@
   },
   "license": "ISC",
   "dependencies": {
-<<<<<<< HEAD
+    "auth0-js": "^9.10.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
-=======
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
->>>>>>> master
     "express-session": "^1.15.6",
     "mysql2": "^1.6.4",
     "passport": "^0.4.0",
